--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,10 @@
 body {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100vw;
+   height: 100vh;
    margin: 0;
    padding: 0;
+   background-color: lightgray;
 }
