Style div(id: content)

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,3 +8,12 @@ body {
    padding: 0;
    background-color: lightgray;
 }
+
+#content {
+   overflow: auto;
+   width: 600px;
+   height: 400px;
+   background-color: white;
+   border-radius: 10px;
+   box-shadow: 5px 5px 10px gray;
+}
