Style img element

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,3 +25,8 @@ body {
    padding: 10px 0 10px 0;
    border-bottom: 1px solid lightgray;
 }
+
+img {
+   border: 1px solid lightgray;
+   border-radius: 50%;
+}
