--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,11 @@ h1 {
 p {
    margin: 0 0 0 10px;
 }
+
+button {
+   font-size: 2em;
+   font-weight: bold;
+   color: lightgray;
+   background: none;
+   border: none;
+}
