--- a/styles/main.css
+++ b/styles/main.css
@@ -44,6 +44,18 @@ p {
    margin: 0 0 0 10px;
 }
 
+.tags {
+   display: flex;
+   flex-wrap: wrap;
+}
+
+.tags li {
+   margin: 5px 10px 0 0;
+   padding: 10px;
+   background-color: lightgray;
+   border-radius: 5px;
+}
+
 ul {
    margin: 0 0 0 10px;
    padding: 0;
