--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,12 @@ p {
    border-radius: 5px;
 }
 
+.tag-input {
+   margin: 5px 0 0 10px;
+   border: none;
+   border-bottom: 1px solid lightgray;
+}
+
 ul {
    margin: 0 0 0 10px;
    padding: 0;
