--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,15 @@ body {
    box-shadow: 5px 5px 10px gray;
 }
 
+.search-input {
+   display: block;
+   width: 573px;
+   margin: 0;
+   padding: 5px;
+   border: none;
+   border-bottom: 1px solid lightgray;
+}
+
 .profile {
    display: flex;
    align-items: flex-start;
